# CompressX

./: .gitignore  Dockerfile  README.md  compress.py  compress_config.yaml  pyproject.toml  requirements.txt  setup.sh
compressx/: __init__.py  checkpoints.py  config.py  config_loader.py  context.py  datasets.py  exceptions.py  exporter.py  jobs.py  logging_utils.py  modeling.py  pipeline.py  reports.py  runtime.py
compressx/api/: __init__.py  main.py  routes.py
compressx/cli/: __init__.py  compress.py
compressx/configs/: default_config.yaml
compressx/core/: __init__.py  analyzer.py  distiller.py  evaluator.py  pruner.py  qep_quantizer.py  quantizer.py
compressx/stages/: __init__.py  base.py  distillation.py  evaluation.py  pruning.py  qep.py  quantization.py  sensitivity.py
compressx/tests/: __init__.py  conftest.py  test_analyzer.py  test_architecture.py  test_pipeline.py  test_pruner.py  test_qep.py  test_quantizer.py
compressx/utils/: __init__.py  formatting.py  imports.py  io.py  models.py  pruning.py  quantization.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/compress/: CompressForm.jsx  ConfigEditor.jsx  StageProgress.jsx
frontend/src/components/dashboard/: CompressionChart.jsx  RecentJobs.jsx  StatsCards.jsx
frontend/src/hooks/: useCompress.js  useJob.js  useStats.js
frontend/src/pages/: Dashboard.jsx  JobStatus.jsx  Jobs.jsx  NewCompression.jsx  Settings.jsx
frontend/src/utils/: format.js  settings.js  toast.js
(+9 files in other folders)
